--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,9 @@ exclude =
 # Не проверять указанные файлы на соответствие определённым правилам:
 per-file-ignores =
     */settings.py:E501
+
+[tool.isort]
+profile = "black"
+line_length = 88
+known_first_party = ["api"]
+skip_gitignore = true
