--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools
-        pip install flake8==6.0.0 flake8-isort==6.0.0
         pip install -r ./backend/requirements.txt
+        pip install flake8==6.0.0 flake8-isort==6.0.0
+        
+    - name: Show linter versions (debug)
+      run: |
+        python -m flake8 --version
+        python -m isort --version
     # Запускаем flake8
     - name: Test with flake8 and django tests
       # Вызываем flake8 и указываем ему,
